fix href with tildes being broken on markdown rendering

--- a/src/main-scss/chat.scss
+++ b/src/main-scss/chat.scss
@@ -707,7 +707,7 @@ code {
 			height: 20px;
 			margin: auto;
 			margin-top: -19px;
-			border-radius: 18px;
+			border-radius: 10px;
 			flex-direction: column;
 			justify-content: space-around;
 			align-items: center;
@@ -719,11 +719,10 @@ code {
 					cursor: pointer;
 					&:hover {
 						opacity: 1;
-						//font-size: 20px;
 					}
 				}
 			}
-			box-shadow: 0 0 2px rgba(0, 0, 0, .4);
+			box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 		}
 		&:hover {
 			#input-sizer {
